--- a/lidar_objects_tracker/CMakeLists.txt
+++ b/lidar_objects_tracker/CMakeLists.txt
@@ -67,6 +67,11 @@ install(
   DESTINATION include
 )
 
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
 ament_export_targets(export_${PROJECT_NAME})
 ament_export_dependencies(${DEPS})
 
