--- a/lidar_objects_tracker/package.xml
+++ b/lidar_objects_tracker/package.xml
@@ -14,6 +14,8 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_eigen</depend>
   <depend>eigen</depend>
   <depend>sensor_msgs</depend>
   <depend>angles</depend>
